--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.9",
+        "@types/lodash.debounce": "^4.0.7",
         "autoprefixer": "^10.4.14",
         "cypress": "^12.16.0",
+        "lodash.debounce": "^4.0.8",
         "pino-pretty": "^10.0.0",
         "postcss": "^8.4.24",
         "prettier": "^2.8.8",
