--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.7",
         "framer-motion": "^10.12.17",
+        "lodash": "^4.17.21",
         "next": "^13.4.8",
         "next-auth": "^4.22.1",
         "next-themes": "^0.2.1",
