--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react-hook-form": "^7.45.1",
         "react-intersection-observer": "^9.5.2",
         "react-resize-detector": "^9.1.0",
+        "react-virtuoso": "^4.4.2",
         "react-wrap-balancer": "^1.0.0",
         "sharp": "^0.32.1",
         "swiper": "^10.0.2",
