--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "@prisma/client": "^4.16.1",
         "@svgr/webpack": "^8.0.1",
         "@tailwindcss/container-queries": "^0.1.1",
-        "@tanstack/react-query": "^4.29.19",
-        "@tanstack/react-query-devtools": "^4.29.19",
+        "@tanstack/query-core": "^4.32.0",
+        "@tanstack/react-query": "^4.32.0",
+        "@tanstack/react-query-devtools": "^4.32.0",
+        "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
         "@tanstack/react-table": "^8.9.3",
         "@types/node": "20.3.2",
         "@types/react": "18.2.14",
@@ -35,7 +37,7 @@
         "eslint-config-next": "13.4.7",
         "framer-motion": "^10.12.17",
         "lodash": "^4.17.21",
-        "next": "^13.4.8",
+        "next": "^13.4.12",
         "next-auth": "^4.22.1",
         "next-themes": "^0.2.1",
         "notistack": "^3.0.1",
