--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.13.6",
         "@next-auth/prisma-adapter": "^1.0.7",
+        "@paypal/react-paypal-js": "^8.1.1",
         "@prisma/client": "^4.16.1",
         "@svgr/webpack": "^8.0.1",
         "@tailwindcss/container-queries": "^0.1.1",
