--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.13.6",
         "@next-auth/prisma-adapter": "^1.0.7",
+        "@paypal/checkout-server-sdk": "^1.0.3",
         "@paypal/react-paypal-js": "^8.1.1",
         "@prisma/client": "^4.16.1",
         "@svgr/webpack": "^8.0.1",
@@ -69,7 +70,7 @@
         "postcss": "^8.4.24",
         "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.3.0",
-        "prisma": "^4.16.1",
+        "prisma": "^5.1.1",
         "tailwindcss": "^3.3.2"
     },
     "prisma": {
