--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "lint": "next lint",
         "cypress:open": "cypress open",
         "cypress:run": "cypress run",
-        "postinstall": "prisma generate && prisma push && prisma seed"
+        "postinstall": "prisma generate && prisma db push && prisma db seed"
     },
     "dependencies": {
         "@emotion/cache": "^11.11.0",
