--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,5 +36,5 @@
     // "react-email-starter/.react-email/emails/template.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules",".next"]
 }
