--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
         "dayjs": "^1.11.8",
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.7",
-        "framer-motion": "^10.12.17",
+        "framer-motion": "^10.16.4",
         "lodash": "^4.17.21",
-        "next": "^13.4.13",
-        "next-auth": "^4.22.1",
+        "next": "^13.5.1",
+        "next-auth": "^4.23.1",
         "next-themes": "^0.2.1",
         "notistack": "^3.0.1",
         "pino": "^8.14.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-hook-form": "^7.45.1",
         "react-intersection-observer": "^9.5.2",
         "react-resize-detector": "^9.1.0",
@@ -55,7 +55,7 @@
         "sharp": "^0.32.1",
         "swiper": "^10.0.2",
         "ts-node": "^10.9.1",
-        "typescript": "5.1.5",
+        "typescript": "^5.2.2",
         "usehooks-ts": "^2.9.1",
         "yarn": "^1.22.19",
         "zod": "^3.21.4",
