--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "lint": "next lint",
         "cypress:open": "cypress open",
         "cypress:run": "cypress run",
-        "postinstall": "prisma generate && prisma db push && prisma db seed",
-        "test": "jest --watch"
+        "postinstall": "prisma generate && prisma db push && prisma db seed"
     },
     "dependencies": {
         "@emotion/cache": "^11.11.0",
@@ -23,7 +22,7 @@
         "@next-auth/prisma-adapter": "^1.0.7",
         "@paypal/checkout-server-sdk": "^1.0.3",
         "@paypal/react-paypal-js": "^8.1.1",
-        "@prisma/client": "^5.3.1",
+        "@prisma/client": "^5.1.1",
         "@svgr/webpack": "^8.0.1",
         "@tailwindcss/container-queries": "^0.1.1",
         "@tanstack/query-core": "^4.32.0",
@@ -64,19 +63,15 @@
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.9",
-        "@testing-library/jest-dom": "^6.1.3",
-        "@testing-library/react": "^14.0.0",
         "@types/lodash.debounce": "^4.0.7",
         "autoprefixer": "^10.4.14",
         "cypress": "^12.16.0",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
         "lodash.debounce": "^4.0.8",
         "pino-pretty": "^10.0.0",
         "postcss": "^8.4.24",
         "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.3.0",
-        "prisma": "^5.3.1",
+        "prisma": "^5.1.1",
         "tailwindcss": "^3.3.2"
     },
     "prisma": {
