--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "lint": "next lint",
         "cypress:open": "cypress open",
         "cypress:run": "cypress run",
-        "postinstall": "prisma generate && prisma db push && prisma db seed",
+        "postiiinstall": "prisma generate && prisma db push && prisma db seed",
         "test": "jest --watch"
     },
     "dependencies": {
@@ -66,6 +66,7 @@
         "@tailwindcss/typography": "^0.5.9",
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
+        "@types/jest": "^29.5.5",
         "@types/lodash.debounce": "^4.0.7",
         "autoprefixer": "^10.4.14",
         "cypress": "^12.16.0",
