--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "cypress:open": "cypress open",
         "cypress:run": "cypress run",
         "postinstall": "prisma generate",
-        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch"
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+        "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --ci"
     },
     "dependencies": {
         "@emotion/cache": "^11.11.0",
@@ -27,8 +28,8 @@
         "@svgr/webpack": "^8.0.1",
         "@tailwindcss/container-queries": "^0.1.1",
         "@tanstack/query-core": "^4.32.0",
-        "@tanstack/react-query": "^4.32.0",
-        "@tanstack/react-query-devtools": "^4.32.0",
+        "@tanstack/react-query": "^4.36.1",
+        "@tanstack/react-query-devtools": "^4.36.1",
         "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
         "@tanstack/react-table": "^8.9.3",
         "@types/node": "20.3.2",
@@ -66,11 +67,16 @@
         "@tailwindcss/typography": "^0.5.9",
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.5.1",
         "@types/jest": "^29.5.5",
         "@types/lodash.debounce": "^4.0.7",
         "autoprefixer": "^10.4.14",
         "cypress": "^12.16.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "lodash.debounce": "^4.0.8",
+        "msw": "^1.3.2",
+        "node-fetch": "^3.3.2",
         "pino-pretty": "^10.0.0",
         "postcss": "^8.4.24",
         "prettier": "^2.8.8",
