--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
         "react-resize-detector": "^9.1.0",
         "react-virtuoso": "^4.6.2",
         "react-wrap-balancer": "^1.0.0",
-        "semver": "6.3.1",
         "sharp": "^0.32.1",
         "swiper": "^10.0.2",
         "tough-cookie": "4.1.3",
@@ -88,5 +87,8 @@
     },
     "prisma": {
         "seed": "ts-node --require tsconfig-paths/register --compiler-options {\"module\":\"CommonJS\"}  src/lib/prisma/seed.ts"
+    },
+    "engines": {
+        "node": ">=18.18.2 <21.0.0"
     }
 }
